remove usage of deprecated Long constructor in testclasses